# MVPM

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  models.rs
src-tauri/src/commands/: mod.rs  mojang.rs  packs.rs  recording.rs  settings.rs
src/lib/: index.ts
src/lib/assets/: help.md
src/lib/components/: Breadcrumb.svelte  DownloadProgress.svelte  HelpButton.svelte  PackCard.svelte  SearchBar.svelte  ThemeToggle.svelte  Tile.svelte  TileGrid.svelte  WarningDialog.svelte
src/lib/stores/: createWizard.svelte.ts  pack.svelte.ts  recording.svelte.ts  settings.svelte.ts  sounds.svelte.ts  versions.svelte.ts
src/lib/utils/: api.ts  audio.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/create/details/: +page.svelte
src/routes/create/icon/: +page.svelte
src/routes/create/version/: +page.svelte
src/routes/help/: +page.svelte
src/routes/pack/[id]/: +page.svelte
src/routes/pack/[id]/edit/: +page.svelte
src/routes/record/: +page.svelte
src/routes/settings/: +page.svelte
