[package]
name = "mvpm"
version = "0.1.0"
description = "Minecraft Voice Pack Maker"
authors = ["matmcw"]
license = "MIT"
repository = "https://github.com/matmcw/MVPM"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
vorbis_rs = "0.5"
